--- a/alpine-clang/Dockerfile
+++ b/alpine-clang/Dockerfile
@@ -1,21 +1,23 @@
 FROM alpine:latest
 
+LABEL maintainer="Marcin Kurdziel <cpp17build@gmail.com>"
 LABEL version="1.1"
-LABEL author="Marcin Kurdziel <cpp17build@gmail.com>"
 LABEL github="https://github.com/Kot97/cppbuild"
+
+RUN apk update && apk upgrade
+RUN apk add make cmake 
+
+#TODO : do version with lld without gcc
+RUN apk add g++      
 
 ENV CMAKE_C_COMPILER /usr/bin/clang
 ENV CMAKE_CXX_COMPILER /usr/bin/clang++
-
-ENV build-name "build-alpine-clang-latest"
-
-RUN apk update && apk upgrade
-
-RUN apk add g++      
-#TODO : do version with lld without gcc
 RUN apk add clang
-RUN apk add make cmake 
 
-CMD if [ ! -d /cppbuild/${build-name} ]; then \
-        mkdir /cppbuild/${build-name}; fi \
-    && cd /cppbuild/${build-name} && cmake .. && make
+ENV buildname "build-alpine-clang-latest"
+
+ADD build.sh /
+RUN chmod +x /build.sh
+
+ENTRYPOINT [ "/build.sh" ]
+CMD [ "cppbuild" ]
