move env to build.sh

--- a/alpine-clang/Dockerfile
+++ b/alpine-clang/Dockerfile
@@ -1,17 +1,15 @@
+#TODO : build clang from source and use libc++ and lld
+
 FROM alpine:latest
 
 LABEL maintainer="Marcin Kurdziel <cpp17build@gmail.com>"
-LABEL version="1.1"
+LABEL version="1.2"
 LABEL github="https://github.com/Kot97/cppbuild"
 
 RUN apk update && apk upgrade
 RUN apk add make cmake 
 
-#TODO : do version with lld without gcc
-RUN apk add g++      
-
-ENV CMAKE_C_COMPILER /usr/bin/clang
-ENV CMAKE_CXX_COMPILER /usr/bin/clang++
+RUN apk add g++
 RUN apk add clang
 
 ENV buildname "build-alpine-clang-latest"
