--- a/alpine/gcc/Dockerfile
+++ b/alpine/gcc/Dockerfile
@@ -1,20 +1,15 @@
-FROM alpine:3.10
+#TODO : file with files to build
+
+FROM alpine
 
 LABEL author="Marcin Kurdziel <cpp17build@gmail.com>"
-LABEL version="1.2"
+LABEL version="1.3"
 LABEL github="https://github.com/Kot97/cppbuild"
 
 RUN apk update && \ 
     apk add --no-cache \
-    cmake \
     gcc \
     make \
     musl-dev
 
-ENV buildname "build-alpine-gcc-latest"
-
-COPY build.sh /
-RUN chmod +x /build.sh
-
-ENTRYPOINT [ "/build.sh" ]
-CMD [ "cppbuild" ]
+ENTRYPOINT [ "/bin/sh" ]
