--- a/alpine/gxx/Dockerfile
+++ b/alpine/gxx/Dockerfile
@@ -1,7 +1,7 @@
-FROM alpine:3.10
+FROM alpine
 
 LABEL author="Marcin Kurdziel <cpp17build@gmail.com>"
-LABEL version="1.2"
+LABEL version="1.3"
 LABEL github="https://github.com/Kot97/cppbuild"
 
 RUN apk update && \
@@ -10,7 +10,7 @@ RUN apk update && \
     g++ \
     make
 
-ENV buildname "build-alpine-gxx-latest"
+ENV buildname "build-alpine-gxx"
 
 COPY build.sh /
 RUN chmod +x /build.sh
