--- a/alpine/gxx/gtest/Dockerfile
+++ b/alpine/gxx/gtest/Dockerfile
@@ -1,7 +1,7 @@
-FROM alpine:3.10
+FROM alpine
 
 LABEL author="Marcin Kurdziel <cpp17build@gmail.com>"
-LABEL version="1.2"
+LABEL version="1.3"
 LABEL github="https://github.com/Kot97/cppbuild"
 
 RUN apk update && \
@@ -10,9 +10,10 @@ RUN apk update && \
     g++ \
     gmock \
     gtest \
+    gtest-dev \
     make
 
-ENV buildname "build-alpine-gxx-gtest-latest"
+ENV buildname "build-alpine-gxx-gtest"
 
 COPY build.sh /
 RUN chmod +x /build.sh
