--- a/alpine/clang/boost/Dockerfile
+++ b/alpine/clang/boost/Dockerfile
@@ -7,11 +7,13 @@ LABEL github="https://github.com/Kot97/cppbuild"
 RUN apk update && \
     apk add --no-cache \
     clang \
+    boost \
+    boost-dev \
     cmake \
     g++ \
     make
 
-ENV buildname "build-alpine-clang"
+ENV buildname "build-alpine-clang-boost"
 
 COPY build.sh /
 RUN chmod +x /build.sh
