--- a/alpine/clang/boost/Dockerfile
+++ b/alpine/clang/boost/Dockerfile
@@ -11,7 +11,8 @@ RUN apk update && \
     boost-dev \
     cmake \
     g++ \
-    make
+    make \
+    linux-headers
 
 ENV buildname "build-alpine-clang-boost"
 
