--- a/alpine/gxx/boost/Dockerfile
+++ b/alpine/gxx/boost/Dockerfile
@@ -10,7 +10,8 @@ RUN apk update && \
     boost-dev \
     cmake \
     g++ \
-    make
+    make \
+    linux-headers
 
 ENV buildname "build-alpine-gxx-boost"
 
