--- a/alpine/gxx/gtest/Dockerfile
+++ b/alpine/gxx/gtest/Dockerfile
@@ -9,7 +9,8 @@ RUN apk update && \
         cmake \
         g++ \
         git \
-        make && \
+        make \
+        linux-headers && \
     git clone -b master https://github.com/google/googletest.git && \
     cd googletest && mkdir build && cd build && \
     cmake .. && make && make install && cd ../.. && rm -R googletest && apk del git
